--- a/.github/workflows/mobile-build.yml
+++ b/.github/workflows/mobile-build.yml
@@ -59,12 +59,15 @@ jobs:
           name: web-build
           path: dist/spa/
           retention-days: 7
+          if-no-files-found: warn
+          compression-level: 6
+          overwrite: false
+          include-hidden-files: false
 
   build-android:
     name: Build Android App
     runs-on: ubuntu-latest
     needs: build-web
-    if: github.event.inputs.platforms == 'android' || github.event.inputs.platforms == 'both' || github.event.inputs.platforms == ''
 
     steps:
       - name: Checkout code
@@ -79,16 +82,22 @@ jobs:
       - name: Setup Java JDK
         uses: actions/setup-java@v4
         with:
-          distribution: "temurin"
+          distribution: temurin
           java-version: ${{ env.JAVA_VERSION }}
+          java-package: jdk
 
       - name: Setup Android SDK
         uses: android-actions/setup-android@v3
+        with:
+          cmdline-tools-version: 12266719
+          accept-android-sdk-licenses: true
+          log-accepted-android-sdk-licenses: true
+          packages: tools platform-tools
 
       - name: Install dependencies
         run: npm ci
 
-      - name: Download web build
+      - name: Download web build artifact
         uses: actions/download-artifact@v4
         with:
           name: web-build
@@ -97,32 +106,10 @@ jobs:
       - name: Sync Capacitor
         run: npx cap sync android
 
-      - name: Build Android Debug APK
-        if: github.event.inputs.build_type == 'development' || github.event.inputs.build_type == ''
-        run: |
-          cd android
-          ./gradlew assembleDebug
-
-      - name: Build Android Release APK
-        if: github.event.inputs.build_type == 'production'
-        run: |
-          cd android
-          ./gradlew assembleRelease
-
-      - name: Upload Android APK
-        uses: actions/upload-artifact@v4
-        with:
-          name: android-apk
-          path: |
-            android/app/build/outputs/apk/debug/*.apk
-            android/app/build/outputs/apk/release/*.apk
-          retention-days: 30
-
   build-ios:
     name: Build iOS App
-    runs-on: macos-latest
+    runs-on: macos-14
     needs: build-web
-    if: github.event.inputs.platforms == 'ios' || github.event.inputs.platforms == 'both' || github.event.inputs.platforms == ''
 
     steps:
       - name: Checkout code
@@ -134,10 +121,17 @@ jobs:
           node-version: ${{ env.NODE_VERSION }}
           cache: "npm"
 
+      - name: Setup Java JDK
+        uses: actions/setup-java@v4
+        with:
+          distribution: temurin
+          java-version: ${{ env.JAVA_VERSION }}
+          java-package: jdk
+
       - name: Install dependencies
         run: npm ci
 
-      - name: Download web build
+      - name: Download web build artifact
         uses: actions/download-artifact@v4
         with:
           name: web-build
@@ -146,80 +140,7 @@ jobs:
       - name: Sync Capacitor
         run: npx cap sync ios
 
-      - name: Setup iOS Certificate and Provisioning Profile
-        if: github.event.inputs.build_type == 'production'
-        env:
-          BUILD_CERTIFICATE_BASE64: ${{ secrets.BUILD_CERTIFICATE_BASE64 }}
-          P12_PASSWORD: ${{ secrets.P12_PASSWORD }}
-          BUILD_PROVISION_PROFILE_BASE64: ${{ secrets.BUILD_PROVISION_PROFILE_BASE64 }}
-          KEYCHAIN_PASSWORD: ${{ secrets.KEYCHAIN_PASSWORD }}
-        run: |
-          # Create variables
-          CERTIFICATE_PATH=$RUNNER_TEMP/build_certificate.p12
-          PP_PATH=$RUNNER_TEMP/build_pp.mobileprovision
-          KEYCHAIN_PATH=$RUNNER_TEMP/app-signing.keychain-db
 
-          # Import certificate and provisioning profile from secrets
-          echo -n "$BUILD_CERTIFICATE_BASE64" | base64 --decode --output $CERTIFICATE_PATH
-          echo -n "$BUILD_PROVISION_PROFILE_BASE64" | base64 --decode --output $PP_PATH
-
-          # Create temporary keychain
-          security create-keychain -p "$KEYCHAIN_PASSWORD" $KEYCHAIN_PATH
-          security set-keychain-settings -lut 21600 $KEYCHAIN_PATH
-          security unlock-keychain -p "$KEYCHAIN_PASSWORD" $KEYCHAIN_PATH
-
-          # Import certificate to keychain
-          security import $CERTIFICATE_PATH -P "$P12_PASSWORD" -A -t cert -f pkcs12 -k $KEYCHAIN_PATH
-          security list-keychain -d user -s $KEYCHAIN_PATH
-
-          # Apply provisioning profile
-          mkdir -p ~/Library/MobileDevice/Provisioning\ Profiles
-          cp $PP_PATH ~/Library/MobileDevice/Provisioning\ Profiles
-
-      - name: Build iOS Debug
-        if: github.event.inputs.build_type == 'development' || github.event.inputs.build_type == ''
-        run: |
-          cd ios
-          xcodebuild -workspace App.xcworkspace \
-                     -scheme App \
-                     -destination 'generic/platform=iOS Simulator' \
-                     -derivedDataPath DerivedData \
-                     build
-
-      - name: Build iOS Release Archive
-        if: github.event.inputs.build_type == 'production'
-        run: |
-          cd ios
-          xcodebuild -workspace App.xcworkspace \
-                     -scheme App \
-                     -destination 'generic/platform=iOS' \
-                     -archivePath App.xcarchive \
-                     -derivedDataPath DerivedData \
-                     archive
-
-      - name: Export IPA
-        if: github.event.inputs.build_type == 'production'
-        run: |
-          cd ios
-          xcodebuild -exportArchive \
-                     -archivePath App.xcarchive \
-                     -exportPath Export \
-                     -exportOptionsPlist ../scripts/ExportOptions.plist
-
-      - name: Upload iOS Build Artifacts
-        uses: actions/upload-artifact@v4
-        with:
-          name: ios-build
-          path: |
-            ios/DerivedData/Build/Products/
-            ios/Export/*.ipa
-          retention-days: 30
-
-      - name: Clean up keychain and provisioning profile
-        if: ${{ always() && github.event.inputs.build_type == 'production' }}
-        run: |
-          security delete-keychain $RUNNER_TEMP/app-signing.keychain-db
-          rm ~/Library/MobileDevice/Provisioning\ Profiles/build_pp.mobileprovision
 
   deploy-testflight:
     name: Deploy to TestFlight
@@ -239,9 +160,9 @@ jobs:
 
       - name: Upload to TestFlight
         env:
-          APP_STORE_CONNECT_API_KEY_ID: ${{ secrets.APP_STORE_CONNECT_API_KEY_ID }}
-          APP_STORE_CONNECT_API_ISSUER_ID: ${{ secrets.APP_STORE_CONNECT_API_ISSUER_ID }}
-          APP_STORE_CONNECT_API_KEY_BASE64: ${{ secrets.APP_STORE_CONNECT_API_KEY_BASE64 }}
+          APP_STORE_CONNECT_API_KEY_ID: ${{ secrets.APP_STORE_CONNECT_API_KEY_ID || '' }}
+          APP_STORE_CONNECT_API_ISSUER_ID: ${{ secrets.APP_STORE_CONNECT_API_ISSUER_ID || '' }}
+          APP_STORE_CONNECT_API_KEY_BASE64: ${{ secrets.APP_STORE_CONNECT_API_KEY_BASE64 || '' }}
         run: |
           # Create API key file
           echo -n "$APP_STORE_CONNECT_API_KEY_BASE64" | base64 --decode --output AuthKey.p8
