--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,5 +1,5 @@
 # Project-wide Gradle settings.
-org.gradle.java.home=C:\\Program Files\\Java\\jdk-24
+# org.gradle.java.home=C:\\Program Files\\Java\\jdk-24
 
 
 # IDE (e.g. Android Studio) users:
